Fixes issue with title wrapping

--- a/src/scss/modules/_product.scss
+++ b/src/scss/modules/_product.scss
@@ -26,6 +26,7 @@
     margin-top: 0;
     font-size: 34px;
     font-weight: normal;
+    height: auto;
   }
 
   // this shouldn't really be nested, but .product__title is, so this is consistent
